--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>this is a new repo</p>
+    <p>this is a new repo (BUTTON)</p>
 </body>
 </html>
